@@ -9,9 +9,9 @@ import com.app.entity.User;
 import com.app.exception.custom.InvalidParamException;
 import com.app.exception.custom.UserAlreadyExistException;
 import com.app.exception.custom.UserNotFoundException;
-import com.app.service.AuthenticationService;
+import com.app.service.AuthenticationServiceImpl;
 import com.app.service.UserService;
-import lombok.RequiredArgsConstructor;
+import com.app.service.UserServiceImpl;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -21,7 +21,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.app.util.MessageConstants.*;
 import static com.app.util.Utils.tagMethodName;
@@ -30,8 +29,8 @@ import static com.app.util.Utils.tagMethodName;
 public class UserFacade {
 
 
-    private final UserService userService;
-    private final AuthenticationService authenticationService;
+    private final UserServiceImpl userService;
+    private final AuthenticationServiceImpl authenticationService;
     private final ModelMapper modelMapper;
     private final PasswordEncoder passwordEncoder;
     private final AuthenticationManager authenticationManager;
@@ -40,15 +39,13 @@ public class UserFacade {
     private static final String TAG = "UserFacade";
 
     @Autowired
-    public UserFacade(UserService userService,AuthenticationService authenticationService, ModelMapper modelMapper,
-                      PasswordEncoder passwordEncoder,AuthenticationManager authenticationManager,LoggerService logger)
-    {
-        this.userService=userService;
-        this.authenticationService=authenticationService;
-        this.modelMapper=modelMapper;
-        this.passwordEncoder=passwordEncoder;
-        this.authenticationManager=authenticationManager;
-        this.logger=logger;
+    public UserFacade(UserServiceImpl userService, AuthenticationServiceImpl authenticationService, ModelMapper modelMapper, PasswordEncoder passwordEncoder, AuthenticationManager authenticationManager, LoggerService logger) {
+        this.userService = userService;
+        this.authenticationService = authenticationService;
+        this.modelMapper = modelMapper;
+        this.passwordEncoder = passwordEncoder;
+        this.authenticationManager = authenticationManager;
+        this.logger = logger;
 
     }
 
@@ -92,9 +89,7 @@ public class UserFacade {
             logger.error(tagMethodName(TAG, methodName), "User not found", null);
             throw new UserNotFoundException();
         }
-        return users.stream()
-                .map(user -> modelMapper.map(user, RegisterUserDto.class))
-                .collect(Collectors.toList());
+        return users.stream().map(user -> modelMapper.map(user, RegisterUserDto.class)).toList();
     }
 
     /**
@@ -108,7 +103,7 @@ public class UserFacade {
         String methodName = "saveUser";
         logger.request(tagMethodName(TAG, methodName), registerUserDto);
         if (registerUserDto == null) {
-            logger.error(tagMethodName(TAG, methodName), "User data cannot be null",null);
+            logger.error(tagMethodName(TAG, methodName), "User data cannot be null", null);
             throw new InvalidParamException(USER_DATA_NULL);
         }
 
@@ -117,30 +112,30 @@ public class UserFacade {
             User existingUser = userService.getUserById(registerUserDto.getId());
             logger.response(tagMethodName(TAG, methodName), existingUser);
             if (existingUser != null) {
-                logger.error(tagMethodName(TAG, methodName), "User already exist",null);
+                logger.error(tagMethodName(TAG, methodName), "User already exist", null);
                 throw new UserAlreadyExistException();
             }
         }
 
         if (registerUserDto.getEmailId() == null || registerUserDto.getEmailId().trim().isEmpty()) {
-            logger.error(tagMethodName(TAG, methodName), "User Email Id is null",null);
+            logger.error(tagMethodName(TAG, methodName), "User Email Id is null", null);
             throw new InvalidParamException(EMAIL_ID_VALID);
         }
 
         // Check if email already exists
         if (userService.isEmailExists(registerUserDto.getEmailId())) {
-            logger.error(tagMethodName(TAG, methodName), "User Email already exists",null);
+            logger.error(tagMethodName(TAG, methodName), "User Email already exists", null);
             throw new InvalidParamException(EMAIL_ID_ALREADY_REGISTERED);
         }
 
         if (registerUserDto.getMobileNo() == null || registerUserDto.getMobileNo().trim().isEmpty()) {
-            logger.error(tagMethodName(TAG, methodName), "Mobile no required",null);
+            logger.error(tagMethodName(TAG, methodName), "Mobile no required", null);
             throw new InvalidParamException(MOBILE_NUMBER_REQUIRED);
         }
 
         // Check if mobile number already exists
         if (userService.isMobileExists(registerUserDto.getMobileNo())) {
-            logger.error(tagMethodName(TAG, methodName), "User mobile no already exist",null);
+            logger.error(tagMethodName(TAG, methodName), "User mobile no already exist", null);
             throw new InvalidParamException(MOBILE_NUMBER_ALREADY_REGISTERED);
         }
 
@@ -148,7 +143,7 @@ public class UserFacade {
         User user = modelMapper.map(registerUserDto, User.class);
         logger.response(tagMethodName(TAG, methodName), user);
         if (registerUserDto.getPassword() == null || registerUserDto.getPassword().trim().isEmpty()) {
-            logger.error(tagMethodName(TAG, methodName), "User password cannot be null",null);
+            logger.error(tagMethodName(TAG, methodName), "User password cannot be null", null);
             throw new InvalidParamException(PASSWORD_NULL);
         }
 
@@ -173,13 +168,13 @@ public class UserFacade {
         String methodName = "updateUser";
         logger.request(tagMethodName(TAG, methodName), updateUserDto);
         if (updateUserDto == null) {
-            logger.error(tagMethodName(TAG, methodName), "User data cannot be null",null);
+            logger.error(tagMethodName(TAG, methodName), "User data cannot be null", null);
             throw new InvalidParamException(USER_DATA_NULL);
         }
 
         // Check if user ID is provided
         if (updateUserDto.getId() == null) {
-            logger.error(tagMethodName(TAG, methodName), "User id is required",null);
+            logger.error(tagMethodName(TAG, methodName), "User id is required", null);
             throw new InvalidParamException(USER_ID_REQUIRED);
         }
 
@@ -190,18 +185,16 @@ public class UserFacade {
         }
 
         // Validate email if provided
-        if (updateUserDto.getEmailId() != null && !updateUserDto.getEmailId().trim().isEmpty()) {
-            if (!updateUserDto.getEmailId().equals(existingUser.getEmailId()) && userService.isEmailExists(updateUserDto.getEmailId())) {
-                throw new InvalidParamException(EMAIL_ID_ALREADY_REGISTERED);
-            }
+        if (updateUserDto.getEmailId() != null && !updateUserDto.getEmailId().trim().isEmpty() && !updateUserDto.getEmailId().equals(existingUser.getEmailId()) && userService.isEmailExists(updateUserDto.getEmailId())) {
+            throw new InvalidParamException(EMAIL_ID_ALREADY_REGISTERED);
         }
 
+
         // Validate mobile number if provided
-        if (updateUserDto.getMobileNo() != null && !updateUserDto.getMobileNo().trim().isEmpty()) {
-            if (!updateUserDto.getMobileNo().equals(existingUser.getMobileNo()) && userService.isMobileExists(updateUserDto.getMobileNo())) {
-                throw new InvalidParamException(MOBILE_NUMBER_ALREADY_REGISTERED);
-            }
+        if (updateUserDto.getMobileNo() != null && !updateUserDto.getMobileNo().trim().isEmpty() && !updateUserDto.getMobileNo().equals(existingUser.getMobileNo()) && userService.isMobileExists(updateUserDto.getMobileNo())) {
+            throw new InvalidParamException(MOBILE_NUMBER_ALREADY_REGISTERED);
         }
+
 
         // Update existing user's details
         modelMapper.map(updateUserDto, existingUser);
@@ -242,17 +235,14 @@ public class UserFacade {
         }
 
         // Fetch user using email, mobile number, or username
-        User user = authenticationService.findByEmailIdOrMobileNoOrUserName(input.getLoginId())
-                .orElseThrow(() -> {
-                    logger.warn(tagMethodName(TAG, methodName), "User not found for loginId: " + input.getLoginId());
-                    return new UserNotFoundException();
-                });
+        User user = authenticationService.findByEmailIdOrMobileNoOrUserName(input.getLoginId()).orElseThrow(() -> {
+            logger.warn(tagMethodName(TAG, methodName), "User not found for loginId: " + input.getLoginId());
+            return new UserNotFoundException();
+        });
 
         // Authenticate user
         try {
-            authenticationManager.authenticate(
-                    new UsernamePasswordAuthenticationToken(input.getLoginId(), input.getPassword())
-            );
+            authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(input.getLoginId(), input.getPassword()));
             logger.info(tagMethodName(TAG, methodName), "User authentication successful for: " + input.getLoginId());
         } catch (Exception e) {
             logger.error(tagMethodName(TAG, methodName), "Authentication failed for user: " + input.getLoginId(), e);
